src/parser/snapshots/rbx_rsml__parser__tests__table_empty.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Val",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Table {
                body: Delimited {
                    left: Node {
                        token: SpannedToken(
                            7,
                            ParensOpen,
                            8,
                        ),
                        leading_trivia: None,
                    },
                    content: None,
                    right: Some(
                        Node {
                            token: SpannedToken(
                                8,
                                ParensClose,
                                9,
                            ),
                            leading_trivia: None,
                        },
                    ),
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    9,
                    SemiColon,
                    10,
                ),
                leading_trivia: None,
            },
        ),
    },
]
