src/parser/snapshots/rbx_rsml__parser__tests__table_missing_close.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                TokenIdentifier(
                    "Val",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Table {
                body: Delimited {
                    left: Node {
                        token: SpannedToken(
                            7,
                            ParensOpen,
                            8,
                        ),
                        leading_trivia: None,
                    },
                    content: Some(
                        [
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        8,
                                        Number(
                                            "1",
                                        ),
                                        9,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        9,
                                        Comma,
                                        10,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                            Node {
                                node: Node {
                                    token: SpannedToken(
                                        11,
                                        Number(
                                            "2",
                                        ),
                                        12,
                                    ),
                                    leading_trivia: None,
                                },
                            },
                        ],
                    ),
                    right: None,
                },
            },
        ),
        terminator: None,
    },
]
